--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "node-fetch": "^2.6.1",
+    "telegraf": "^4.4.1"
   },
   "devDependencies": {
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "@types/node-fetch": "^2.5.12",
+    "typescript": "^4.3.5"
   },
   "private": true
 }
