--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
+    "ip-matching": "^2.1.2",
     "node-fetch": "^2.6.1",
     "telegraf": "^4.4.1"
   },
