--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
+    "serve": "export DEBUGGING=yes && rm -f .tunnel.lock && npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -13,6 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@au5ton/snooze": "^1.0.3",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
     "ip-matching": "^2.1.2",
@@ -20,7 +21,9 @@
     "telegraf": "^4.4.1"
   },
   "devDependencies": {
+    "@types/localtunnel": "^2.0.1",
     "@types/node-fetch": "^2.5.12",
+    "localtunnel": "^2.0.1",
     "typescript": "^4.3.5"
   },
   "private": true
