--- a/firebase.json
+++ b/firebase.json
@@ -4,8 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build",
-    "postdeploy": "node \"$RESOURCE_DIR/scripts/postdeploy.js\""
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
   },
   "emulators": {
     "functions": {
